--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=rosalilaenginexmleditor.MainWindow
+main.class=rosalila.engine.xmleditor.MainWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
